--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "jest": {
     "testEnvironment": "node"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "jest": "^25.1.0"
+  "devDependencies": {
+    "jest": "^28.0.2"
   }
 }
